--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="header">
       <div>
         <div>
-            <img src="./bbb.png" alt="">
+            <img class="pic" src="./bbb.png" alt="">
         </div>
       
       <div class="right"></div>
@@ -34,8 +34,8 @@
     <div class="afternav">
       <div class="mleft">
         <div class="about">
-          <div>
-            <h1>About ITEE</h1>
+          <div >
+            <h1 class="about-h1" >About ITEE</h1>
           </div>
           <p class="a">
             ITEE stands for Information Technology Engineers Examination. ITEE
@@ -76,7 +76,7 @@
         </div>
         <div class="iteeasia">
             <h1>ITEE in Asia</h1>
-            <div>
+            <div class="asia">
                 ITEE qualification is widely accepted in Asian region. An agreement of mutual recognition on ITEE examination has been made amongst 13 countries in Asia. ITEE certification is mutually recognized in China, Chinese Taipei, India, Japan, Korea, Singapore, Philippines, Malaysia, Mongolia, Myanmar, Thailand, Vietnam and Bangladesh.
                 ITPEC is an organization to co-ordinate all the efforts of member countries in the implementation of IT Engineers Skill Standards and IT Engineers Examinations in Asia. Bangladesh has joined as ITPEC member country on 1 September 2014. Member countries of ITPEC are Philippines, Mongolia, Myanmar, Thailand, Vietnam and Bangladesh.
 
